# physics-engine-rm

./: CMakeLists.txt  README.md  vcpkg.json
include/: Angle.h  Circle.h  CollisionInfo.h  ConvexPolygon.h  Gizmo.h  ICollider.h  IMouseAction.h  LineSegment.h  ObjectDragger.h  PolygonDrawer.h  Rigidbody.h  Spring.h  SpringConnector.h  Transform.h  UI.h  Vec3.h  World.h
src/: CMakeLists.txt  Circle.cpp  ConvexPolygon.cpp  Gizmo.cpp  LineSegment.cpp  ObjectDragger.cpp  PolygonDrawer.cpp  Rigidbody.cpp  Spring.cpp  SpringConnector.cpp  Transform.cpp  UI.cpp  Vec3.cpp  World.cpp  main.cpp
